@@ -169,7 +169,7 @@ static int parse_options(int argc, char **argv)
 		{ NULL,		    0,			NULL, 0   }
 	};
 
-	char c = -1;
+	int c = -1;
 	int err  = 0;
 	int ver  = 0;
 	int help = 0;
@@ -183,7 +183,7 @@ static int parse_options(int argc, char **argv)
 	opts.attr_name = NULL;
 	opts.attr_name_len = 0;
 
-	while ((c = getopt_long(argc, argv, sopt, lopt, NULL)) != (char)-1) {
+	while ((c = getopt_long(argc, argv, sopt, lopt, NULL)) != -1) {
 		switch (c) {
 		case 1:	/* A non-option argument */
 			if (!opts.device) {
