@@ -297,11 +297,11 @@ static void parse_options(int argc, char **argv)
 		{ NULL, 0, NULL, 0 }
 	};
 
-	char c;
+	int c;
 
 	memset(&opt, 0, sizeof(opt));
 
-	while ((c = getopt_long(argc, argv, sopt, lopt, NULL)) != (char)-1) {
+	while ((c = getopt_long(argc, argv, sopt, lopt, NULL)) != -1) {
 		switch (c) {
 		case 1:	/* A non-option argument */
 			if (opt.volume)
