@@ -134,7 +134,7 @@ static int parse_options(int argc, char **argv)
 	};
 
 	char *s;
-	char c = -1;
+	int c = -1;
 	int err  = 0;
 	int ver  = 0;
 	int help = 0;
@@ -150,7 +150,7 @@ static int parse_options(int argc, char **argv)
 
 	opterr = 0; /* We'll handle the errors, thank you. */
 
-	while ((c = getopt_long(argc, argv, sopt, lopt, NULL)) != (char) -1) {
+	while ((c = getopt_long(argc, argv, sopt, lopt, NULL)) != -1) {
 		switch (c) {
 		case 1:	/* A non-option argument */
 			if (!opts.device) {
