@@ -130,7 +130,7 @@ static void version(void)
  */
 static void parse_options(int argc, char **argv)
 {
-	char c;
+	int c;
 	static const char *sopt = "-hV";
 	static const struct option lopt[] = {
 		{ "help",	no_argument,	NULL, 'h' },
@@ -140,7 +140,7 @@ static void parse_options(int argc, char **argv)
 
 	memset(&opt, 0, sizeof(opt));
 
-	while ((c = getopt_long(argc, argv, sopt, lopt, NULL)) != (char)-1) {
+	while ((c = getopt_long(argc, argv, sopt, lopt, NULL)) != -1) {
 		switch (c) {
 		case 1:	/* A non-option argument */
 			if (!opt.volume)
