@@ -166,7 +166,7 @@ static int parse_options(int argc, char *argv[])
 		{ NULL,		 0,			NULL,  0  }
 	};
 
-	char c = -1;
+	int c = -1;
 	int err  = 0;
 	int ver  = 0;
 	int help = 0;
@@ -177,7 +177,7 @@ static int parse_options(int argc, char *argv[])
 	opts.inode = -1;
 	opts.filename = NULL;
 
-	while ((c = getopt_long(argc, argv, sopt, lopt, NULL)) != (char)-1) {
+	while ((c = getopt_long(argc, argv, sopt, lopt, NULL)) != -1) {
 		ntfs_log_trace("optind=%d; c='%c' optarg=\"%s\".\n", optind, c,
 				optarg);
 		switch (c) {
