@@ -122,7 +122,7 @@ static int parse_options(int argc, char *argv[])
 		{ NULL, 0, NULL, 0 },
 	};
 
-	char c = -1;
+	int c = -1;
 	int err  = 0;
 	int ver  = 0;
 	int help = 0;
