@@ -210,7 +210,7 @@ static int parse_options(int argc, char *argv[])
 		{ NULL, 0, NULL, 0 },
 	};
 
-	char c = -1;
+	int c = -1;
 	int err  = 0;
 	int ver  = 0;
 	int help = 0;
@@ -222,7 +222,7 @@ static int parse_options(int argc, char *argv[])
 	opts.device = NULL;
 	opts.path = "/";
 
-	while ((c = getopt_long(argc, argv, sopt, lopt, NULL)) != (char)-1) {
+	while ((c = getopt_long(argc, argv, sopt, lopt, NULL)) != -1) {
 		switch (c) {
 		case 1:
 			if (!opts.device)
