@@ -453,7 +453,7 @@ static int parse_options(int argc, char **argv)
 		{ NULL, 0, NULL, 0 }
 	};
 
-	char c;
+	int c;
 	int err  = 0;
 	int ver  = 0;
 	int help = 0;
@@ -461,7 +461,7 @@ static int parse_options(int argc, char **argv)
 	memset(&opt, 0, sizeof(opt));
 	opt.show_progress = 1;
 
-	while ((c = getopt_long(argc, argv, sopt, lopt, NULL)) != (char)-1) {
+	while ((c = getopt_long(argc, argv, sopt, lopt, NULL)) != -1) {
 		switch (c) {
 		case 1:	/* A non-option argument */
 			if (!err && !opt.volume)
